--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "libraries/RTClib"]
 	path = libraries/RTClib
 	url = git@github.com:xxxajk/RTClib.git
-[submodule "libraries/Arduino_Makefile_master"]
-	path = libraries/Arduino_Makefile_master
-	url = git@github.com:xxxajk/Arduino_Makefile_master.git
 [submodule "libraries/xmem2"]
 	path = libraries/xmem2
 	url = git@github.com:xxxajk/xmem2.git
@@ -25,3 +22,6 @@
 [submodule "libraries/generic_storage"]
 	path = libraries/generic_storage
 	url = git@github.com:xxxajk/generic_storage.git
+[submodule "Arduino_Makefile_master"]
+	path = Arduino_Makefile_master
+	url = git@github.com:xxxajk/Arduino_Makefile_master.git
